feat: add exec-maven-plugin